--- a/formulario.html
+++ b/formulario.html
@@ -5,36 +5,38 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" media="screen" href="./styles.css">
+  <link rel="stylesheet" href="./styles.css"> <!--!Se actualiza el link-->
   <title>Formulario</title>
 </head>
+
 <body>
   <h1>Bienvenidos a mi fiesta</h1>
   <h2>Por favor, confirmar asistencia:</h2>
 
-  <form class="formulario">
-    Nombre <input type="text" name="name" id="name">
-    <br />
-    Edad <input type="number" name="age" id="age">
-    <br />
 
-    Nacionalidad
-    <select name="nationality" id="nationality">
-      <option value="ar">Argentina</option>
-      <option value="mx">Mexicana</option>
-      <option value="per">Peruana</option>
-      <option value="vnzl">Venezolana</option>
-    </select>
-    <br />
+  <!--!Se da formato para todo el formulario-->
+  <form class="formulario">
+    <span>Nombre</span>
+      <input type="text" name="name" id="name" class="elemento-lista"> <!--!Se coloca en span el texto-->
+  <br/> <!--!Se elimina el espacio entre br y /-->
+    <span>Edad</span>
+      <input type="number" name="age" id="age" class="elemento-lista">
+  <br/> <!--!Se elimina el espacio entre br y /-->
+    <span>Nacionalidad</span>
+      <select name="nationality" id="nationality" class="elemento-lista-input" > <!--!Se añade la clase elemento-lista-->
+        <option value="ar">Argentina</option>
+        <option value="mx">Mexicana</option>
+        <option value="per">Peruana</option>
+        <option value="vnzl">Venezolana</option>
+      </select>
+  <br/> <!--!Se elimina el espacio entre br y /-->
     <input type="submit">
   </form>
 
   <div>
     <h2>Lista de invitados</h2>
-
   </div>
 
-  <script src="../formulario.js"></script>
+  <script src="./formulario.js"></script> <!--!Se elimina el punto adicional-->
 </body>
-
 </html>
